[package]
name = "oxydicom"
version = "0.1.0"
authors = ["Robin Lange <robin.langenc@gmail.com>"]
edition = "2018"

[dependencies]
dicom = "0.2"
anyhow = "1.0"
png = "0.16"
jpeg-decoder = "0.1"
jpeg2000 = "0.3"
iced = { version = "0.1", features = ["image", "svg"]}
clipboard = "0.5"


[[bin]]
name = "dicom2png"
path = "src/dicom2png.rs"

[[bin]]
name = "benchmark"
path = "src/benchmark.rs"
